--- a/tapeman.ipynb
+++ b/tapeman.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits import mplot3d\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.interpolate import CubicSpline"
    ]
