tapenn working with ebeam data

--- a/plotqt.ipynb
+++ b/plotqt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1\n",
-      "1 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class MplCanvas(FigureCanvasQTAgg):\n",
     "\n",
@@ -67,6 +58,10 @@
     "        for i in np.arange(0, 170, 10):\n",
     "            table.setItem(i//10, 0, QTableWidgetItem(str(i)))\n",
     "        table.cellChanged.connect(self.onCellChanged)\n",
+    "        tablebox.addWidget(table)\n",
+    "\n",
+    "        tablewidget = QWidget()\n",
+    "        tablewidget.setLayout(tablebox)\n",
     "\n",
     "        pltbox1 = QVBoxLayout()\n",
     "        ax1 = MplCanvas(self, width=4, height=4, dpi=100)\n",
@@ -88,11 +83,24 @@
     "        pltbox2.addWidget(toolbar2)\n",
     "        pltbox2.addWidget(ax2)\n",
     "\n",
+    "        pltwidget = QWidget()\n",
+    "        pltwidbox = QHBoxLayout()\n",
+    "        pltwid1 = QWidget()\n",
+    "        pltwid1.setLayout(pltbox1)\n",
+    "        pltwid1.setFixedWidth(500)\n",
+    "        pltwid2 = QWidget()\n",
+    "        pltwid2.setLayout(pltbox2)\n",
+    "        pltwid2.setFixedWidth(500)\n",
+    "        pltwidbox.addWidget(pltwid1)\n",
+    "        pltwidbox.addWidget(pltwid2)\n",
+    "        pltwidget.setLayout(pltwidbox)\n",
+    "        pltwidget.setFixedWidth(1000)\n",
     "\n",
-    "        box = QHBoxLayout(self)\n",
-    "        box.addWidget(table)\n",
-    "        box.addLayout(pltbox1)\n",
-    "        box.addLayout(pltbox2)\n",
+    "        box = QHBoxLayout()\n",
+    "        splitter = QSplitter(Qt.Horizontal)\n",
+    "        splitter.addWidget(tablewidget)\n",
+    "        splitter.addWidget(pltwidget)\n",
+    "        box.addWidget(splitter)\n",
     "        self.setLayout(box)\n",
     "\n",
     "        QApplication.setStyle(QStyleFactory.create('Plastique'))\n",
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
